--- a/index.html
+++ b/index.html
@@ -1,111 +1,179 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Questionnaire TCY</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Test d'Admission au TCY</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-image: url('background.png');
-      background-size: cover;
-      background-attachment: fixed;
-      backdrop-filter: blur(8px);
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #0f0f0f;
       color: white;
       padding: 20px;
+      text-align: center;
     }
     .question {
-      margin-bottom: 20px;
+      margin: 20px auto;
+      padding: 20px;
+      background: #1c1c1c;
+      border-radius: 10px;
+      width: 80%;
+    }
+    .question h3 {
+      margin-bottom: 10px;
     }
     button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #d40000;
+      background: #d4002a;
       color: white;
+      padding: 10px 20px;
       border: none;
+      border-radius: 6px;
       cursor: pointer;
+      margin: 10px;
     }
-    #resultat {
-      font-size: 24px;
+    button:hover {
+      background: #ff0033;
+    }
+    #score {
+      font-size: 1.5em;
       margin-top: 30px;
     }
   </style>
 </head>
 <body>
-  <h1>Questionnaire pour entrer au Técéygrec (TCY)</h1>
-  <form id="quizForm"></form>
-  <button onclick="soumettre()">Soumettre</button>
-  <div id="resultat"></div>
+
+  <h1>Test d'Admission au TCY</h1>
+  <div id="quiz-container"></div>
+  <div id="score"></div>
+  <button onclick="startQuiz()">Recommencer</button>
 
   <script>
-    const questions = [
-      { q: "Quel est le but du Técéygrec ?", a: ["Combattre les yags", "Devenir célèbre", "Gagner de l'argent", "Aider les yags"], p: [1, 0, 0.25, 0] },
-      { q: "Qui était Walkez ?", a: ["Un ancien yag devenu agent du TCY", "Un chanteur", "Un président", "Un robot"], p: [1, 0, 0, 0] },
-      { q: "Comment éviter la contagion des particules yags ?", a: ["S'entraîner mentalement", "Se laver les mains", "Manger des pâtes", "Devenir yag"], p: [1, 0.25, 0, 0] },
-      { q: "Que faire si on est touché par un yag ?", a: ["Chercher un agent TCY", "Rester seul", "Appeler un yag", "Abandonner"], p: [1, 0, 0, 0] },
-      { q: "Que signifie TCY ?", a: ["Tous Contre les Yags", "Team Cool Youngs", "Tacos Chauds Yvelines", "Tournoi Champions Yag"], p: [1, 0, 0, 0] },
-      { q: "Que faire si on est en infériorité numérique face aux yags ?", a: ["Activer la yagophrénie", "Fuir immédiatement", "Négocier", "Se déguiser"], p: [1, 0.25, 0, 0] },
-      { q: "Qu’est-ce que la yagophrénie ?", a: ["Un état mental extrême anti-yag", "Une danse", "Un virus", "Une couleur"], p: [1, 0, 0, 0] },
-      { q: "Qui est Homix ?", a: ["Le fondateur du TCY", "Un général yag", "Un scientifique", "Un rappeur"], p: [1, 0, 0, 0] },
-      { q: "Comment repérer un yag infiltré ?", a: ["Son comportement suspect", "Sa couleur de cheveux", "Il est trop gentil", "Il ne parle pas"], p: [1, 0, 0.5, 0.25] },
-      { q: "Quel est le rôle d’un agent du TCY ?", a: ["Protéger l’humanité", "Créer des chansons", "Parler avec les yags", "Faire des TikToks"], p: [1, 0.25, 0, 0] },
-      { q: "Quelle est la faiblesse d’un yrruf ?", a: ["Le son aigu", "L’eau bénite", "Les câlins", "Les rations militaires"], p: [1, 0.5, 0, 0.25] },
-      { q: "Quel est le pire ennemi du TCY ?", a: ["Le yrruf", "Le soon", "Le chat", "Le téléphone"], p: [1, 0, 0, 0] },
-      { q: "Que faire en cas d’invasion massive de yags ?", a: ["Se battre avec rage", "Appeler la police", "Dormir", "Pleurer"], p: [1, 0.25, 0, 0] },
-      { q: "Le TCY recrute parfois à quel moment ?", a: ["Pendant la cantine", "Dans la rue", "Au supermarché", "Sur YouTube"], p: [1, 0.25, 0, 0] },
-      { q: "Quelles couleurs pourrait avoir le drapeau du TCY ?", a: ["Rouge et noir", "Bleu et vert", "Rose et violet", "Orange et blanc"], p: [1, 0.25, 0, 0] },
-      { q: "Un yag blessé appelle à l'aide. Tu :", a: ["Fonces avec la yagophrénie", "L’aide", "Le captures", "Le soignes"], p: [1, 0, 0.5, 0] },
-      { q: "Quel est ton état d'esprit face au danger ?", a: ["Déterminé", "Stressé", "Peureux", "Indécis"], p: [1, 0.25, 0, 0] },
-      { q: "Si tu entends ‘Camille’, tu penses :", a: ["Alerte yag", "Une amie", "Inoffensif", "Inconnu"], p: [1, 0.25, 0, 0] },
-      { q: "Les particules TCY servent à :", a: ["Purifier des agents", "Décorer les bases", "Faire joli", "Infecter les yags"], p: [1, 0.25, 0, 0.5] },
-      { q: "Si tu perds ton arme :", a: ["Tu continues avec tes poings", "Tu fuis", "Tu cries", "Tu abandonnes"], p: [1, 0, 0, 0] },
-      { q: "La meilleure arme contre un yrruf ?", a: ["Une muselière", "Un bâton", "Une boule de poils", "Un fromage"], p: [1, 0.25, 0, 0] },
-      { q: "Un soon se cache parmi vous. Tu :", a: ["L'observes discrètement", "Fuis", "L’invites à boire", "Appelles Homix"], p: [0.5, 0, 0, 1] },
-      { q: "Quel style de musique écoute un agent du TCY ?", a: ["Musique TCY", "Classique", "Pop", "Yag rap"], p: [1, 0.5, 0.25, 0] },
-      { q: "Qui est le plus fort ?", a: ["Un agent yagophrène", "Un chat mutant", "Un IB", "Un yrruf avec deux crocs"], p: [1, 0, 0.25, 0.25] },
-      { q: "Si tu trahis le TCY ?", a: ["C’est fini pour toi", "Tu t’en tires", "Tu rigoles", "Tu reviens"], p: [1, 0, 0, 0] },
-      { q: "Quelle est la capitale du Técéygrec ?", a: ["Forteresse de glace", "Paris", "BloxCity", "Zone 52"], p: [1, 0, 0.25, 0.5] },
-      { q: "Un yag déguisé en humain dit ‘salut’. Tu :", a: ["Ressens un doute", "Dis bonjour", "L’ignores", "Le tapes"], p: [1, 0.25, 0.25, 0.5] },
-      { q: "Quel est le nom secret du fondateur ?", a: ["Homix", "T-Rex", "Obi-One", "Dr. Max"], p: [1, 0, 0, 0.25] },
-      { q: "Un IB devient yag, que faire ?", a: ["Tenter de le purifier", "Le fuir", "Le capturer", "Le laisser faire"], p: [1, 0.25, 0.5, 0] },
-      { q: "Quel est ton objectif principal ?", a: ["Protéger le monde du danger des yags", "Devenir riche", "Être populaire", "Éviter les ennuis"], p: [1, 0, 0, 0] }
+    const allQuestions = [
+      { q: "Es-tu prêt à défendre le TCY contre toutes les menaces ?", answers: [
+          { text: "Oui, à tout prix", score: 10 },
+          { text: "Oui, mais avec des réserves", score: 7 },
+          { text: "Non, je préfère éviter les conflits", score: 2 },
+          { text: "Je ne sais pas, je vais réfléchir", score: 0 }
+        ]},
+      { q: "Serais-tu prêt à sacrifier quelque chose de précieux pour le TCY ?", answers: [
+          { text: "Oui, si c’est pour la cause", score: 10 },
+          { text: "Peut-être, cela dépend de la situation", score: 6 },
+          { text: "Non, je ne suis pas prêt à sacrifier quoi que ce soit", score: 0 },
+          { text: "Je pense qu’il y a d'autres alternatives", score: 4 }
+        ]},
+      { q: "Crois-tu que les Yags sont une menace sérieuse pour la communauté ?", answers: [
+          { text: "Oui, ils sont une menace directe", score: 10 },
+          { text: "Oui, mais ils peuvent être gérés", score: 7 },
+          { text: "Non, ce n'est pas une menace majeure", score: 2 },
+          { text: "Je ne sais pas, j’ai besoin de plus d’informations", score: 0 }
+        ]},
+      { q: "Es-tu capable de prendre des décisions difficiles pour le bien de la cause ?", answers: [
+          { text: "Oui, je peux faire face aux situations difficiles", score: 10 },
+          { text: "Parfois, si je suis bien préparé", score: 7 },
+          { text: "Cela dépend de la situation", score: 4 },
+          { text: "Je préfère éviter les décisions difficiles", score: 0 }
+        ]},
+      { q: "Crois-tu en l'importance de la solidarité au sein du TCY ?", answers: [
+          { text: "Oui, c'est essentiel pour la survie du groupe", score: 10 },
+          { text: "Oui, mais il faut parfois agir seul", score: 6 },
+          { text: "Non, je pense qu'il faut d'abord se concentrer sur soi-même", score: 2 },
+          { text: "Je n'y ai jamais vraiment pensé", score: 0 }
+        ]},
+      { q: "Veux-tu t'engager à combattre les Yags à chaque occasion ?", answers: [
+          { text: "Oui, c'est ma priorité", score: 10 },
+          { text: "Oui, mais dans des situations appropriées", score: 7 },
+          { text: "Non, je préfère éviter les confrontations", score: 3 },
+          { text: "Je ne sais pas, je vais observer", score: 0 }
+        ]},
+      { q: "Seras-tu un membre loyal et fidèle au TCY en toutes circonstances ?", answers: [
+          { text: "Oui, je suis dévoué à 100%", score: 10 },
+          { text: "Oui, mais je pourrais avoir des doutes parfois", score: 6 },
+          { text: "Non, je préfère rester indépendant", score: 2 },
+          { text: "Je ne suis pas sûr, mais je veux essayer", score: 4 }
+        ]},
+      { q: "Est-ce que tu accepterais de sacrifier une partie de ta liberté pour le TCY ?", answers: [
+          { text: "Oui, pour la bonne cause", score: 10 },
+          { text: "Peut-être, selon les circonstances", score: 7 },
+          { text: "Non, je tiens trop à ma liberté", score: 2 },
+          { text: "Je ne sais pas, je vais réfléchir", score: 0 }
+        ]},
+      { q: "Penses-tu que l'unité est plus importante que les différences individuelles ?", answers: [
+          { text: "Oui, l'unité est essentielle", score: 10 },
+          { text: "Parfois, mais je pense qu’il faut aussi respecter les différences", score: 7 },
+          { text: "Non, je crois qu’il faut privilégier les individus", score: 2 },
+          { text: "Je ne sais pas, c'est complexe", score: 0 }
+        ]},
+      { q: "Es-tu prêt à prendre les armes pour défendre le TCY si nécessaire ?", answers: [
+          { text: "Oui, à 100%", score: 10 },
+          { text: "Peut-être, mais je préférerais éviter la violence", score: 6 },
+          { text: "Non, je ne suis pas prêt à cela", score: 0 },
+          { text: "Je ne sais pas, ça dépend de la situation", score: 4 }
+        ]},
+      // ...ajouter d'autres questions ici
     ];
 
-    function genererQuiz() {
-      const form = document.getElementById("quizForm");
-      form.innerHTML = "";
-      const indices = Array.from({ length: questions.length }, (_, i) => i).sort(() => 0.5 - Math.random()).slice(0, 10);
+    let currentQuestions = [];
+    let score = 0;
 
-      indices.forEach((i, idx) => {
-        const q = questions[i];
-        const div = document.createElement("div");
-        div.className = "question";
-        div.innerHTML = `<p>${idx + 1}. ${q.q}</p>`;
-        q.a.forEach((rep, j) => {
-          div.innerHTML += `<label><input type='radio' name='q${i}' value='${q.p[j]}'> ${rep}</label><br>`;
-        });
-        form.appendChild(div);
-      });
+    function shuffle(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+      return array;
     }
 
-    function soumettre() {
-      const inputs = document.querySelectorAll("input[type=radio]:checked");
-      let score = 0;
-      inputs.forEach(input => {
-        score += parseFloat(input.value);
-      });
-      const pourcentage = Math.round((score / 10) * 100);
-      const res = document.getElementById("resultat");
-      let message = "";
-      if (pourcentage === 100) message = "Tu es un véritable héros du Técéygrec !";
-      else if (pourcentage >= 80) message = "Tu es un agent très prometteur !";
-      else if (pourcentage >= 60) message = "Tu peux progresser, mais tu es sur la bonne voie.";
-      else if (pourcentage >= 40) message = "Fais attention, certains choix étaient douteux...";
-      else message = "Tu dois revoir les bases du Técéygrec.";
-      res.innerText = `Score : ${pourcentage}%\n${message}`;
+    function startQuiz() {
+      // Mélange les questions et sélectionne les 10 premières
+      currentQuestions = shuffle(allQuestions).slice(0, 10);
+      score = 0;
+      displayQuestion(0);
     }
 
-    genererQuiz();
+    function displayQuestion(index) {
+      const container = document.getElementById("quiz-container");
+      container.innerHTML = "";
+
+      if (index < currentQuestions.length) {
+        const questionData = currentQuestions[index];
+        const questionElement = document.createElement("div");
+        questionElement.classList.add("question");
+        questionElement.innerHTML = `
+          <h3>${questionData.q}</h3>
+          ${questionData.answers.map((answer, i) => `
+            <button onclick="answerQuestion(${i}, ${index})">${answer.text}</button>
+          `).join('')}
+        `;
+        container.appendChild(questionElement);
+      } else {
+        showScore();
+      }
+    }
+
+    function answerQuestion(answerIndex, questionIndex) {
+      score += currentQuestions[questionIndex].answers[answerIndex].score;
+      displayQuestion(questionIndex + 1);
+    }
+
+    function showScore() {
+      const container = document.getElementById("score");
+      let percentage = (score / (10 * 10)) * 100; // Score max: 10 réponses * 10 points max par réponse
+      container.innerHTML = `Votre score est : ${percentage}%`;
+
+      let level = '';
+      if (percentage >= 80) {
+        level = 'Agent Elite du TCY';
+      } else if (percentage >= 60) {
+        level = 'Agent du TCY';
+      } else if (percentage >= 40) {
+        level = 'Novice du TCY';
+      } else {
+        level = 'Non admis au TCY';
+      }
+
+      container.innerHTML += `<br>Vous êtes : ${level}`;
+    }
   </script>
+
 </body>
 </html>
