--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         q: "Si tu vois un yag très blessé qui te supplie de le sauver, que fais tu ?",
         answers: [
           { text: "Je l’aide tout de suite !", score: 0 },
-          { text: "Je l’extermine sans pitié.", score: 6 },
+          { text: "Je l’extermine sans pitié. C’est un yag, les yags sont une menace, peut importe la situation !", score: 6 },
           { text: "J’analyse la situation, si c’est un yag qu’il est encore possible de purifier, je le sauve et le purifie, sinon je le tue.", score: 10 },
           { text: "Je l’ignore", score: 4 }
         ]
@@ -73,18 +73,18 @@
         q: "Si tu as un ami qui devient yag, que fais tu ?",
         answers: [
           { text: "Je le tue direct !", score: 2 },
-          { text: "Je fais pareil que lui, c’est mon ami !", score: -5 },
+          { text: "Je fais pareil que lui, c’est mon ami, et je n’abandonne jamais un ami !", score: -5 },
           { text: "J’appelle un autre agent si possible et essaye de le purifier", score: 10 },
           { text: "Je ne fais rien…", score: 0 },
-          { text: "Je lui fais écouter des musique TCY", score: 5 }
+          { text: "Je lui fais écouter des musique TCY sur le champ avant que cela devienne trop tard !", score: 5 }
         ]
       },
       {
         q: "Si tu a l’impression qu’un yag est infiltré au TCY",
         answers: [
           { text: "Je fais un test de yagophrénie et si je suis négatif, j’observe bien et si il est yag je le dénonce", score: 10 },
-          { text: "Je le tue direct !", score: 1 },
-          { text: "Je m’en fiche", score: 1 },
+          { text: "Je le tue direct ! Les yags sont une menace pour la société, même au TCY !", score: 1 },
+          { text: "Je m’en fiche, après tout il doit avoir des dizaines et des dizaines d’espions yags au TCY", score: 1 },
           { text: "Ce n’est pas grave", score: 0 }
         ]
       },
@@ -119,9 +119,9 @@
         q: "Si un ami te propose d’aller à une fête de yags:",
         answers: [
           { text: "J’y vais, on s’en fiche", score: 1 },
-          { text: "Ouiiiiiiii", score: 0 },
+          { text: "Ouiiiiiiii, autant voir c’est quoi d’être yag", score: 0 },
           { text: "J’y vais quand même pour observer, analyser et faire un rapport même si cela peut être dangereux", score: 7 },
-          { text: "Non, jamais !", score: 4 }
+          { text: "Non, jamais ! Les particules yags peuvent prendre mon contrôle et me yagifier si je baisse ma garde !", score: 4 }
         ]
       },
       {
@@ -136,7 +136,7 @@
       {
         q: "Es-tu prêt à devenir yag si le TCY te force ?",
         answers: [
-          { text: "Oui, à 100%, j’exécute TOUS les ordres du TCY", score: 0 },
+          { text: "Oui, à 100%, j’exécute TOUS les ordres du TCY peut importe l’ordre", score: 0 },
           { text: "Je lutterais", score: 6 },
           { text: "Non, jamais, plutôt mourrir, même si le TCY me le demande !", score: 10 },
           { text: "Je ne sais pas, ça dépend de la situation", score: 2 }
