--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         ]
       },
       {
-        q: "Es-tu prêt à devenir yag si le TCY te force ?",
+        q: "Es-tu prêt à devenir yag même sile TCY te force à le faire ?",
         answers: [
           { text: "Oui, à 100%, j’exécute TOUS les ordres du TCY peut importe l’ordre", score: 0 },
           { text: "Je lutterais", score: 6 },
