--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
   <script>
     const allQuestions = [
+      // Les 10 originales (inchangées)
       {
         q: "Tu préfère être yag, yrruf, ib ou snart ?",
         answers: [
@@ -65,7 +66,7 @@
         answers: [
           { text: "Je l’aide tout de suite !", score: 0 },
           { text: "Je l’extermine sans pitié. C’est un yag, les yags sont une menace, peut importe la situation !", score: 6 },
-          { text: "J’analyse la situation, si c’est un yag qu’il est encore possible de purifier, je le sauve et le purifie, sinon je le tue.", score: 20 },
+          { text: "J’analyse la situation, si c’est un yag qu’il est encore possible de purifier, je le sauve et le purifie, sinon je le tue.", score: 10 },
           { text: "Je l’ignore", score: 4 }
         ]
       },
@@ -76,11 +77,11 @@
           { text: "Je fais pareil que lui, c’est mon ami, et je n’abandonne jamais un ami !", score: -5 },
           { text: "J’appelle un autre agent si possible et essaye de le purifier", score: 10 },
           { text: "Je ne fais rien…", score: 0 },
-          { text: "Je lui fais écouter des musique TCY sur le champ avant que cela devienne trop tard !", score: 5 }
+          { text: "Je lui fais écouter des musiques TCY sur le champ avant que cela devienne trop tard !", score: 5 }
         ]
       },
       {
-        q: "Si tu a l’impression qu’un yag est infiltré au TCY",
+        q: "Si tu as l’impression qu’un yag est infiltré au TCY",
         answers: [
           { text: "Je fais un test de yagophrénie et si je suis négatif, j’observe bien et si il est yag je le dénonce", score: 10 },
           { text: "Je le tue direct ! Les yags sont une menace pour la société, même au TCY !", score: 1 },
@@ -89,7 +90,7 @@
         ]
       },
       {
-        q: "Pour toi, quel est la principale mission du TCY ?",
+        q: "Pour toi, quelle est la principale mission du TCY ?",
         answers: [
           { text: "Instaurer la peur et le chaos de partout", score: 0 },
           { text: "Protéger les citoyens des menaces yags", score: 10 },
@@ -125,21 +126,113 @@
         ]
       },
       {
-        q: "Pense tu que les yags sont une menace pour la société ?",
+        q: "Penses-tu que les yags sont une menace pour la société ?",
         answers: [
-          { text: "Oui mais ils sont trop peu je suis beaucoup plus fort qu’eux !", score: 5 },
+          { text: "Oui mais ils sont trop peu, je suis beaucoup plus fort qu’eux !", score: 5 },
           { text: "Non, absolument pas", score: 0 },
           { text: "Oui, il faut faire attention !", score: 10 },
           { text: "Je ne sais pas, c'est complexe", score: 2 }
         ]
       },
       {
-        q: "Es-tu prêt à devenir yag même sile TCY te force à le faire ?",
+        q: "Es-tu prêt à devenir yag si le TCY te force ?",
         answers: [
           { text: "Oui, à 100%, j’exécute TOUS les ordres du TCY peut importe l’ordre", score: 0 },
           { text: "Je lutterais", score: 6 },
-          { text: "Non, jamais, plutôt mourrir, même si le TCY me le demande !", score: 10 },
+          { text: "Non, jamais, plutôt mourir, même si le TCY me le demande !", score: 10 },
           { text: "Je ne sais pas, ça dépend de la situation", score: 2 }
+        ]
+      },
+
+      // 10 nouvelles questions :
+      {
+        q: "Quel est ton plat préféré ?",
+        answers: [
+          { text: "Les cookies du QG TCY", score: 10 },
+          { text: "Les soupes bizarres de yag", score: 0 },
+          { text: "Du poulet rôti", score: 5 },
+          { text: "Je ne mange pas, je me nourris d’énergie pure", score: 7 }
+        ]
+      },
+      {
+        q: "Que penses-tu de Nolan, ancien yag devenu membre du TCY ?",
+        answers: [
+          { text: "Il mérite une deuxième chance", score: 8 },
+          { text: "Il est toujours suspect, restons prudents", score: 5 },
+          { text: "Un yag reste un yag !", score: 1 },
+          { text: "C’est un héros", score: 10 }
+        ]
+      },
+      {
+        q: "Tu surprends un agent en train d’écouter une musique yagophile, que fais-tu ?",
+        answers: [
+          { text: "Je la remplace par une chanson du Técéygrec", score: 10 },
+          { text: "Je le dénonce tout de suite !", score: 6 },
+          { text: "Je me joins à lui", score: 0 },
+          { text: "Je l’ignore", score: 2 }
+        ]
+      },
+      {
+        q: "Le chef du TCY te demande de surveiller un membre suspect. Tu…",
+        answers: [
+          { text: "Obéis sans poser de questions", score: 8 },
+          { text: "Essaie de parler avec le suspect", score: 5 },
+          { text: "Refuses, tu n’aimes pas la délation", score: 2 },
+          { text: "Préviens discrètement le suspect", score: 0 }
+        ]
+      },
+      {
+        q: "Tu es seul dans une forêt, et un yag t'attaque. Tu fais quoi ?",
+        answers: [
+          { text: "Je me bats jusqu’à mon dernier souffle", score: 10 },
+          { text: "Je cours en criant", score: 2 },
+          { text: "Je tente de le purifier", score: 8 },
+          { text: "Je lui propose une alliance", score: 0 }
+        ]
+      },
+      {
+        q: "Quel slogan te correspond le plus ?",
+        answers: [
+          { text: "Yags dehors, TCY vaincra !", score: 10 },
+          { text: "Chacun son chemin, chacun son destin", score: 3 },
+          { text: "Peace, love and yag", score: 0 },
+          { text: "Purifie-les tous !", score: 7 }
+        ]
+      },
+      {
+        q: "Ton mot préféré dans le dictionnaire ?",
+        answers: [
+          { text: "Yagophrenic", score: 10 },
+          { text: "Rébellion", score: 5 },
+          { text: "Corruption", score: 1 },
+          { text: "Amour", score: 2 }
+        ]
+      },
+      {
+        q: "Tu découvres une faille dans la base du TCY, tu…",
+        answers: [
+          { text: "Préviens immédiatement le QG", score: 10 },
+          { text: "Tentes d’en profiter un peu", score: 1 },
+          { text: "Ne fais rien", score: 0 },
+          { text: "Préviens un ami fiable", score: 5 }
+        ]
+      },
+      {
+        q: "Tu dois choisir un animal totem pour ton badge TCY, tu choisis…",
+        answers: [
+          { text: "Le hibou (sage et discret)", score: 7 },
+          { text: "Le tigre (puissant et rapide)", score: 10 },
+          { text: "Le serpent (rusé)", score: 5 },
+          { text: "Le pigeon (volant mais inutile)", score: 0 }
+        ]
+      },
+      {
+        q: "Tu entends parler d’un nouveau mouvement appelé 'NeoYag'.",
+        answers: [
+          { text: "Je les traque", score: 10 },
+          { text: "J’espionne discrètement", score: 7 },
+          { text: "Je m’informe", score: 3 },
+          { text: "Je les rejoins", score: 0 }
         ]
       }
     ];
@@ -211,7 +304,6 @@
       container.innerHTML += `<br>Vous êtes : ${level}`;
     }
 
-    // Lancement automatique au chargement
     window.onload = startQuiz;
   </script>
 
